--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,11 @@ if (PEPARSE_ENABLE_TESTING)
   enable_testing()
   add_subdirectory(tests)
 endif()
+
+option(PEPARSE_ENABLE_FUZZER "Enable building fuzzer" OFF)
+if (PEPARSE_ENABLE_FUZZER)
+  message(STATUS "Building fuzzer")
+  add_compile_options(-fsanitize=address,undefined,fuzzer-no-link)
+  add_link_options(-fsanitize=address,undefined)
+  add_subdirectory(mayhem)
+endif()
